--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@ensdomains/ensjs": "^4.0.2",
     "@privy-io/react-auth": "^2.17.3",
     "@privy-io/wagmi": "^1.0.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-query": "^5.81.5",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
