--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,14 @@
-# Required - Privy Authentication App ID
 NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id_here
 
-# Base Network RPC URLs
 NEXT_PUBLIC_BASE_RPC_URL=https://mainnet.base.org
+NEXT_PUBLIC_BASE_RPC_URL_BACKUP=https://base.llamarpc.com
+NEXT_PUBLIC_BASE_RPC_URL_ALCHEMY=https://base-mainnet.g.alchemy.com/v2/your_alchemy_key
 
-# Contract Addresses
 NEXT_PUBLIC_BASE_REGISTRY_ADDRESS=0xa2bbe9b6a4ca01806b1cfac4174e4976ce2b0d70
 NEXT_PUBLIC_ETH_RESOLVER_ADDRESS=0x20cb27a5f5c77968650aaaa66e11ba9334689068
 
-# Optional - Additional RPC URLs for different networks
+# Required for AI context generation
+TWITTER_API_KEY=your_twitterapi_io_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+
 NEXT_PUBLIC_ETHEREUM_RPC_URL=https://eth.llamarpc.com
-NEXT_PUBLIC_BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
-
-# Optional - Explorer URLs
-NEXT_PUBLIC_BASESCAN_URL=https://sepolia.basescan.org
-
-# Node Environment (automatically set by Next.js)
-NODE_ENV=development
