--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "openai": "^5.8.2",
+    "permissionless": "^0.2.50",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "viem": "^2.31.7",
